...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="OdB-pd-tkF">
                                                    <rect key="frame" x="8" y="4" width="359" height="35.5"/>
                                                    <nil key="textColor"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ECa-YM-Cg6">
                                                    <rect key="frame" x="8" y="4" width="359" height="35.5"/>
                                                    <nil key="textColor"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="awb-Pa-hwS">
                                                    <rect key="frame" x="8" y="4" width="359" height="35.5"/>
                                                    <state key="normal" title="Log In"/>
                                                    <connections>
                                                        <action selector="didTapLogIn:" destination="eSJ-dh-azM" eventType="touchUpInside" id="UXw-Ae-2nc"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Verify Password" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oj1-Sv-4nV">
                                                    <rect key="frame" x="8" y="4" width="359" height="35.5"/>
                                                    <nil key="textColor"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lnd-FK-BMg">
                                                    <rect key="frame" x="8" y="4" width="359" height="35.5"/>
                                                    <state key="normal" title="Create Account"/>
                                                    <connections>
                                                        <action selector="didTapCreateAccount:" destination="n8t-w1-Jbc" eventType="touchUpInside" id="EI2-vM-Gqx"/>
...
