"account_deleted" = "Your account has been deleted.";
"administrator" = "Administrator";
"after_format" = "After %@";
"authenticating" = "Authenticating";
"before_format" = "Before %@";
"cancel" = "Cancel";
"creating_account" = "Creating Account";
"delete" = "Delete";
"edit_jog" = "Edit Jog";
"error" = "Error";
"logging_in" = "Logging In";
"missing_email" = "Please enter your email.";
"missing_password" = "Please enter your password.";
"missing_verify_password" = "Please verify your password.";
"no_jogs" = "There are no Jogs to display.";
"no_jog_reports" = "There are no Jog Reports to display.";
"no_users" = "There are no Users to display.";
"none" = "None";
"ok" = "OK";
"passwords_do_not_match" = "Your passwords do not match.";
"jog_average_speed_format" = "Average Speed: %.2f km/h";
"jog_distance_format" = "%.0f km";
"jog_time_format" = "%.0f hours, %.0f minutes";
"jog_total_distance_format" = "Total Distance: %.0f km";
"to_format" = "%@ to %@";
"unknown" = "Unknown";
"update" = "Update";
"update_role" = "Update Role";
"update_role_for_format" = "Update role for %@";
"user" = "User";
"user_manager" = "User Manager";
"week_of_format" = "Week of %@";
