...
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7kS-P0-s6r" id="jHc-U1-7FF">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VbO-LP-9wv">
                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                                    <state key="normal" title="Log Out"/>
                                                    <connections>
                                                        <action selector="didTapLogout:" destination="QME-Cv-eGg" eventType="touchUpInside" id="0M9-gr-2wM"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <constraints>
...
